--- a/terminator/config
+++ b/terminator/config
@@ -22,4 +22,6 @@
     exit_action = hold
     foreground_color = "#eceff1"
     palette = "#263238:#ff9800:#8bc34a:#ffc107:#03a9f4:#e91e63:#009688:#cfd8dc:#37474f:#ffa74d:#9ccc65:#ffa000:#81d4fa:#ad1457:#26a69a:#eceff1"
+    scrollback_infinite = True
+    scrollback_lines = 6000
     use_custom_command = True
