--- a/terminator/config
+++ b/terminator/config
@@ -20,7 +20,7 @@
     cursor_color = "#c5c5c5"
     custom_command = fish
     exit_action = hold
-    font = Liberation Mono 13
+    font = Hack 13
     foreground_color = "#c5c5c5"
     palette = "#1c1c1c:#ff005b:#cee318:#ffe755:#048ac7:#833c9f:#0ac1cd:#e5e5e5:#666666:#ff00a0:#ccff00:#ff9f00:#48c6ff:#be67e1:#63e7f0:#f3f3f3"
     scrollback_infinite = True
