--- a/config/terminator/config
+++ b/config/terminator/config
@@ -1,8 +1,11 @@
 [global_config]
+  enabled_plugins = CustomCommandsMenu, TerminalShot, LaunchpadCodeURLHandler, APTURLHandler, LaunchpadBugURLHandler
+  handle_size = 0
   title_inactive_bg_color = "#666666"
   title_inactive_fg_color = "#c5c5c5"
   title_transmit_bg_color = "#1c1c1c"
   title_transmit_fg_color = "#c5c5c5"
+  window_state = maximise
 [keybindings]
 [layouts]
   [[default]]
@@ -14,9 +17,17 @@
       parent = ""
       type = Window
 [plugins]
+  [[CustomCommandsMenu]]
+    [[[Monitor]]]
+      command = gotop
+      enabled = True
+      name = Monitor
+      position = 0
 [profiles]
   [[default]]
     background_color = "#1c1c1c"
+    background_darkness = 0.9
+    background_type = transparent
     cursor_color = "#c5c5c5"
     custom_command = fish
     exit_action = hold
