--- a/config/gitmoji-nodejs/config.json
+++ b/config/gitmoji-nodejs/config.json
@@ -1,6 +1,6 @@
 {
 	"autoAdd": false,
-	"issueFormat": "jira",
 	"emojiFormat": "emoji",
-	"signedCommit": false
+	"signedCommit": false,
+	"scopePrompt": true
 }
