➕ add google-cloud-sdk

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ sublime/Packages/User/*.cache
 sublime/Packages/User/*.last-run
 sublime/Packages/User/*.merged-ca-bundle
 sublime/Packages/User/*.user-ca-bundle
+google-cloud-sdk/
