--- a/config/gitmoji-nodejs/config.json
+++ b/config/gitmoji-nodejs/config.json
@@ -1,6 +1,7 @@
 {
 	"autoAdd": false,
 	"emojiFormat": "emoji",
-	"signedCommit": false,
-	"scopePrompt": true
+	"signedCommit": true,
+	"scopePrompt": true,
+	"gitmojisUrl": "https://gitmoji.dev/api/gitmojis"
 }
