✨ add envs.bash
Signed-off-by: Vinicius Reis <luiz.vinicius73@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ sublime/Packages/User/*.last-run
 sublime/Packages/User/*.merged-ca-bundle
 sublime/Packages/User/*.user-ca-bundle
 google-cloud-sdk/
+bash/envs.bash
